# giraffe-language-skill

./: .env.example  .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API_CONTRACT.md  GLOSSARY_POLICY.md  INTEGRATION_AIVAN_ABCDYI_GIRAFFE_AGENT.md  MODEL_SETUP.md
scripts/: convert_models_to_ctranslate2.py  download_opus_mt_models.py  smoke_translate.py
src/giraffe_language_skill/: __init__.py  config.py
src/giraffe_language_skill/api/: __init__.py  main.py  routes_health.py  routes_inbound.py  routes_models.py  routes_outbound.py  routes_structure.py  routes_translate.py
src/giraffe_language_skill/domains/: __init__.py
src/giraffe_language_skill/extractors/: __init__.py  en_rules.py  ja_rules.py  raw_rules.py  zh_rules.py
src/giraffe_language_skill/glossary/: __init__.py  giraffe_trade_glossary.yml  loader.py  matcher.py
src/giraffe_language_skill/language/: __init__.py  detector.py  normalization.py  segmentation.py
src/giraffe_language_skill/outbound/: __init__.py  channel_formatting.py  renderer.py  templates.py
src/giraffe_language_skill/schemas/: common.py  normalize.py  render.py  structure.py  translate.py
src/giraffe_language_skill/translation/: __init__.py  base.py  cache.py  ctranslate2_provider.py  (+2 more)
tests/: conftest.py  test_api_contracts.py  test_health.py  test_language_detection.py  test_normalize_en_rfq.py  test_normalize_ja_rfq.py  test_normalize_zh_rfq.py  test_outbound_render.py  test_structure_apparel_customization.py  test_structure_trade_rfq.py  test_validation_missing_fields.py
(+8 files in other folders)
