[project]
name = "giraffe-language-skill"
version = "0.1.0"
description = "Giraffe Language Skill Layer — standalone multilingual canonicalization, deterministic extraction, and local translation service for Giraffe products."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Giraffe Technology" }]
keywords = [
    "multilingual",
    "canonicalization",
    "translation",
    "ctranslate2",
    "opus-mt",
    "fastapi",
]
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Real local translation backend. Not required for tests or the mock provider.
ctranslate2 = [
    "ctranslate2>=4.0",
    "sentencepiece>=0.2",
    "transformers>=4.40",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
giraffe-language-skill = "giraffe_language_skill.api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/giraffe_language_skill"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
